--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Welcome to {{title}}</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="container" style="margin-top: 140px">
+  <h1>Welcome to {{title}}</h1>
+  <ul>
+    <!--let product of products loops trougth the array of products-->
+    <li class="list-unstyled" *ngFor="let product of products">
+      {{product.name}}
+    </li>
+  </ul>
+</div>
