shop page configuration

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -2,10 +2,5 @@
 
 <div class="container" style="margin-top: 140px">
   <h1>Welcome to {{title}}</h1>
-  <ul>
-    <!--let product of products loops trougth the array of products-->
-    <li class="list-unstyled" *ngFor="let product of products">
-      {{product.name}}
-    </li>
-  </ul>
+  <app-shop></app-shop>
 </div>
