--- a/Client/src/app/shop/shop.component.html
+++ b/Client/src/app/shop/shop.component.html
@@ -1,1 +1,6 @@
-<p>shop works!</p>
+<ul>
+  <!--let product of products loops trougth the array of products-->
+  <li class="list-unstyled" *ngFor="let product of products">
+    {{product.name}}
+  </li>
+</ul>
